[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-top-hub"
version = "0.1.0"
description = "A multi-provider AI SDK for integrating LLMs like OpenAI and Claude"
readme = "README.md"
authors = [
  { name = "Oghenetejiri Peace Onosajerhe", email = "peaceonosajerhe@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "openai",
  "anthropic"
]

keywords = ["AI", "LLM", "OpenAI", "Claude", "SDK", "machine learning"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]